# Slovowiki

./: .gitattributes  .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENT_REPORT_V7.md  INTEGRATION.md  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  pages.yml
data/: FLAVORIZATION_SPEC.md  MANIFEST.json  RULE_SPEC.md  VOTING_MACHINE_NOTES.md  checktext-fixture.txt  corpus-calibration.json  corpus-coverage-calibration.json  curation-notes.example.json  game-text-fixture.txt  novel-words.tsv  overrides.toml  project-lexicon-fixture.tsv  proto-slavic.cache.json  raw-slavic-coverage.json  refresh-changelog.md  score-calibration.json  slavic-lemmas.cache.json
docs/: DATA-REFRESH.md  PIPELINE.md
docs/history/: IMPROVEMENT_PROMPT_V12.md  IMPROVEMENT_PROMPT_V14.1.md  IMPROVEMENT_PROMPT_V14.3.md  IMPROVEMENT_PROMPT_V14.md
src/: aspect.rs  calibrate.rs  check.rs  coincheck.rs  consensus.rs  corpus.rs  corpus_calibrate.rs  corpus_reference.rs  derive.rs  derive_eval.rs  dump.rs  enrich.rs  eval.rs  falsefriends.rs  fingerprint.rs  flavorize.rs  forms.rs  generator.rs  glossxref.rs  inflect_eval.rs  lang.rs  lib.rs  main.rs  model.rs  morph.rs  normalize.rs  novel.rs  official.rs  orthography.rs  overrides.rs  phono.rs  pipeline.rs  proto.rs  proto_link.rs  release.rs  russian_translit.rs  site.rs  thesaurus.rs
src/site/: assets.rs  coverage.rs  english_api.rs  entries.rs  mod.rs  model.rs  navigation.rs  search.rs  (+2 more)
static/: wiktionary.css
tools/: search-perf.mjs  validate-aspect-export.py  validate-linguistic-logic.py
